--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
+django-crispy-forms
 aniso8601==6.0.0
-Django==2.2.3
+Django==2.2.4
 django-filter==2.2.0
 django-mysql==3.2.0
-django-postgresql==0.0.3
 djangorestframework==3.9.4
 graphene==2.1.7
 graphene-django==2.4.0
