5d19c1697b4c5f5141a0bb10 Create views for Nutrition Profile, Nutrition Targets

--- a/foodtrack/fixtures/measure-units.json
+++ b/foodtrack/fixtures/measure-units.json
@@ -6,5 +6,13 @@
       "name": "undetermined",
       "kind": 30
     }
+  },
+  {
+    "model": "foodtrack.measureunit",
+    "pk": 99999,
+    "fields": {
+      "name": "kg",
+      "kind": 20
+    }
   }
 ]
