--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,9 @@
-django-crispy-forms
+django-crispy-forms==1.7.2
 aniso8601==6.0.0
 Django==2.2.4
-django-filter==2.2.0
 django-mysql==3.2.0
 djangorestframework==3.9.4
 mysqlclient==1.3.14
-Pillow==6.2.1
-promise==2.2.1
 pytz==2019.1
-Rx==1.6.1
 singledispatch==3.4.0.3
 sqlparse==0.3.0
